# UniComm2

./: CMakeLists.txt
include/: config.h  database.h  explorer.h  init.h  log.h  mainWindow.h  manual.h  port.h  script.h  send.h  suffix.h
lib/qscintilla-2.14.1/include/: moc_predefs.h
lib/tesseract-5.5.1/include/: baseapi.h  version.h
resources/doc/: catalogue.md  close.md  info.md  open.md  read.md  write.md
src/: config.cpp  database.cpp  explorer.cpp  init.cpp  log.cpp  main.cpp  mainWindow.cpp  manual.cpp  port.cpp  script.cpp  send.cpp  suffix.cpp
